--- a/pem-mobile-2/meet-7-uts/portfolio-app/app.json
+++ b/pem-mobile-2/meet-7-uts/portfolio-app/app.json
@@ -4,6 +4,7 @@
     "slug": "portfolio",
     "version": "1.0.0",
     "orientation": "portrait",
+    "scheme": "ardisyahportfolio",
     "icon": "./assets/img/favicon.png",
     "userInterfaceStyle": "automatic",
     "splash": {
